tests/ui/type-alias-enum-variants/self-in-enum-definition.stderr
error[E0391]: cycle detected when simplifying constant for the type system `Alpha::V3::{constant#0}`
  --> $DIR/self-in-enum-definition.rs:5:10
   |
LL |     V3 = Self::V1 {} as u8 + 2,
   |          ^^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires const-evaluating + checking `Alpha::V3::{constant#0}`...
  --> $DIR/self-in-enum-definition.rs:5:10
   |
LL |     V3 = Self::V1 {} as u8 + 2,
   |          ^^^^^^^^^^^^^^^^^^^^^
   = note: ...which requires computing layout of `Alpha`...
   = note: ...which again requires simplifying constant for the type system `Alpha::V3::{constant#0}`, completing the cycle
note: cycle used when checking that `Alpha` is well-formed
  --> $DIR/self-in-enum-definition.rs:2:1
   |
LL | enum Alpha {
   | ^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
